Closed Bug 1303095 Opened 8 years ago Closed 8 years ago

Crash in OOM | large | NS_ABORT_OOM | nsAString_internal::Assign | mozilla::dom::XMLHttpRequestStringBuffer::GetAsString

Categories

(Core :: DOM: Core & HTML, defect)

x86
Windows Vista
defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla51
Tracking Status
firefox51 --- fixed

People

(Reporter: mccr8, Assigned: baku)

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

This bug was filed from the Socorro interface and is 
report bp-9499587a-3283-4abd-99d2-e828d2160915.
=============================================================

Large allocation of a string in XHR. It looks like it is 51 only. Maybe this is a regression from bug 1249739? Or at least a signature change.
Could you take a look at this, Andrea? There aren't many crashes in 51 with this, but OOM crashes are usually more common in beta and release than 51. Thanks.
Flags: needinfo?(amarchesini)
Keywords: regression
Attached patch crash_xhr.patchSplinter Review
Assignee: nobody → amarchesini
Flags: needinfo?(amarchesini)
Attachment #8791709 - Flags: review?(continuation)
Comment on attachment 8791709 [details] [diff] [review]
crash_xhr.patch

Review of attachment 8791709 [details] [diff] [review]:
-----------------------------------------------------------------

::: dom/xhr/XMLHttpRequestString.h
@@ +40,5 @@
>  
>    // This method should be called only when the string is really needed because
>    // it can cause the duplication of the strings in case the loading of the XHR
>    // is not completed yet.
> +  bool GetAsString(nsAString& aString) const;

Maybe put a MOZ_MUST_USE here?

@@ +117,5 @@
>    {
>      return !mLength;
>    }
>  
> +  bool GetAsString(nsAString& aString) const;

and here
Attachment #8791709 - Flags: review?(continuation) → review+
Pushed by amarchesini@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/5288360655dd
XMLHttpRequestString should be fallible, r=mccr8
https://hg.mozilla.org/mozilla-central/rev/5288360655dd
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla51
Component: DOM → DOM: Core & HTML
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: