Bug 1303095 - XMLHttpRequestString should be fallible, r=mccr8